[package]
name = "harmonium-in-mac"
version = "0.1.0"
edition = "2024"

[dependencies]
# Your existing deps (we won't use booklid yet in Step 1, but keep it)
booklid-rust = { git = "https://github.com/chintan-27/booklid-rust", version = "1.0.0" }
futures-util = "0.3.31"

# Tokio (keep it, but add required features because you'll use #[tokio::main] later)
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }

# GUI (Phase 1)
eframe = "0.29"
egui = "0.29"
